OR-741 Fixed z-index of help popover

--- a/web/public/ui/css/modules/global/gqa-body.scss
+++ b/web/public/ui/css/modules/global/gqa-body.scss
@@ -54,7 +54,7 @@
 	position: fixed;
 	bottom: $grid-gutter-width / 2;
 	right: $grid-gutter-width / 4;
-	z-index: 9;
+	z-index: 1050;
 
 	.dropdown > a {
 		cursor: pointer;
